--- a/Clone_Starbucks/Source/Screen/Home/Order/View/OrderCartTableViewCell.xib
+++ b/Clone_Starbucks/Source/Screen/Home/Order/View/OrderCartTableViewCell.xib
@@ -3,6 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="253" id="KGk-i7-Jjw" customClass="OrderCartTableViewCell" customModule="Clone_Starbucks" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="474" height="253"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="220" id="KGk-i7-Jjw" customClass="OrderCartTableViewCell" customModule="Clone_Starbucks" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="474" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="474" height="253"/>
+                <rect key="frame" x="0.0" y="0.0" width="474" height="220"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="248" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" translatesAutoresizingMaskIntoConstraints="NO" id="LyB-jW-sCT">
@@ -25,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="253" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="751" axis="vertical" alignment="top" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="Urp-i5-2MR">
-                        <rect key="frame" x="150" y="40" width="314" height="142.5"/>
+                        <rect key="frame" x="150" y="40" width="314" height="139.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Menu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFP-G3-Cb9">
                                 <rect key="frame" x="0.0" y="0.0" width="44" height="20.5"/>
@@ -33,8 +35,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5R-OF-ydG">
-                                <rect key="frame" x="0.0" y="41.5" width="33" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="English Menu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5R-OF-ydG">
+                                <rect key="frame" x="0.0" y="41.5" width="81" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" systemColor="systemGray2Color"/>
                                 <nil key="highlightedColor"/>
@@ -64,40 +66,60 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C4R-4G-GpW">
-                                <rect key="frame" x="0.0" y="119.5" width="314" height="23"/>
+                                <rect key="frame" x="0.0" y="119.5" width="314" height="20"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JCL-xI-s75">
-                                        <rect key="frame" x="0.0" y="0.0" width="23" height="23"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="23" id="9ed-ZC-0g4"/>
-                                            <constraint firstAttribute="width" constant="23" id="Jm9-iS-mhE"/>
+                                            <constraint firstAttribute="height" constant="20" id="9ed-ZC-0g4"/>
+                                            <constraint firstAttribute="width" constant="20" id="Jm9-iS-mhE"/>
                                         </constraints>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="minus" catalog="system"/>
+                                        <connections>
+                                            <action selector="plusMinusBtnPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="O4v-Nq-aXj"/>
+                                        </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9hn-pq-YG4">
+                                        <rect key="frame" x="20" y="0.0" width="10" height="20"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="10" id="eeg-cs-JOt"/>
+                                        </constraints>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WeS-dE-TvQ">
-                                        <rect key="frame" x="23" y="0.0" width="8.5" height="23"/>
+                                        <rect key="frame" x="30" y="0.0" width="8.5" height="20"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M94-zP-vME">
-                                        <rect key="frame" x="31.5" y="0.0" width="23" height="23"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTF-02-jXf">
+                                        <rect key="frame" x="38.5" y="0.0" width="10" height="20"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="23" id="5E6-30-ucZ"/>
-                                            <constraint firstAttribute="height" constant="23" id="coL-za-3vx"/>
+                                            <constraint firstAttribute="width" constant="10" id="TXX-4w-GZg"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M94-zP-vME">
+                                        <rect key="frame" x="48.5" y="0.0" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="5E6-30-ucZ"/>
+                                            <constraint firstAttribute="height" constant="20" id="coL-za-3vx"/>
                                         </constraints>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
+                                        <connections>
+                                            <action selector="plusMinusBtnPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Loi-PH-mwH"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4Y-L7-f8Y">
-                                        <rect key="frame" x="54.5" y="0.0" width="200" height="23"/>
+                                        <rect key="frame" x="68.5" y="0.0" width="186" height="20"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" horizontalCompressionResistancePriority="753" text="4,900원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aq1-L2-s54">
-                                        <rect key="frame" x="254.5" y="0.0" width="59.5" height="23"/>
+                                        <rect key="frame" x="254.5" y="0.0" width="59.5" height="20"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -112,20 +134,32 @@
                             <constraint firstAttribute="trailing" secondItem="6uH-4K-snf" secondAttribute="trailing" id="cy1-7J-ILT"/>
                         </constraints>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMr-wz-6XQ">
-                        <rect key="frame" x="15" y="15" width="45.5" height="31"/>
-                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="square" catalog="system"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAK-46-dxP">
+                        <rect key="frame" x="15" y="15" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="C5O-2e-0iw"/>
+                            <constraint firstAttribute="height" constant="25" id="Jt0-th-VhI"/>
+                        </constraints>
+                        <color key="tintColor" name="StarbucksColor"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal">
+                            <imageReference key="image" image="square" catalog="system" symbolScale="large"/>
+                        </state>
+                        <state key="selected">
+                            <imageReference key="backgroundImage" image="checkmark.square.fill" catalog="system" symbolScale="large"/>
+                        </state>
+                        <connections>
+                            <action selector="selectBtnPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="nGa-uZ-E64"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="eMr-wz-6XQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Id5-ib-AzQ"/>
+                    <constraint firstItem="kAK-46-dxP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="09j-4I-LSB"/>
+                    <constraint firstItem="kAK-46-dxP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="GGz-pZ-2HO"/>
                     <constraint firstItem="LyB-jW-sCT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="NnW-o5-kEq"/>
                     <constraint firstItem="Urp-i5-2MR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="RIW-Jc-Ub4"/>
                     <constraint firstItem="Urp-i5-2MR" firstAttribute="leading" secondItem="LyB-jW-sCT" secondAttribute="trailing" constant="10" id="Ww2-cP-Fgt"/>
                     <constraint firstItem="LyB-jW-sCT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="bNX-di-U84"/>
-                    <constraint firstItem="eMr-wz-6XQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="nS1-Ef-VUi"/>
                     <constraint firstAttribute="trailing" secondItem="Urp-i5-2MR" secondAttribute="trailing" constant="10" id="rDD-QE-RxK"/>
                 </constraints>
             </tableViewCellContentView>
@@ -136,16 +170,22 @@
                 <outlet property="kindLabel" destination="cCu-8E-umY" id="bWo-h3-4Ae"/>
                 <outlet property="menuImageView" destination="LyB-jW-sCT" id="odA-1M-lOA"/>
                 <outlet property="menuLabel" destination="lFP-G3-Cb9" id="XWe-Xq-GMO"/>
+                <outlet property="minusBtn" destination="JCL-xI-s75" id="kBs-kq-wgT"/>
+                <outlet property="plusBtn" destination="M94-zP-vME" id="UXj-Hy-Lsb"/>
                 <outlet property="priceLabel" destination="wF1-BS-Rjc" id="U60-Fr-tf1"/>
                 <outlet property="sumPriceLabel" destination="aq1-L2-s54" id="3dT-ml-PmO"/>
             </connections>
-            <point key="canvasLocation" x="220.28985507246378" y="59.263392857142854"/>
+            <point key="canvasLocation" x="220.28985507246378" y="48.214285714285715"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="checkmark.square.fill" catalog="system" width="128" height="114"/>
         <image name="minus" catalog="system" width="128" height="24"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square" catalog="system" width="128" height="114"/>
+        <namedColor name="StarbucksColor">
+            <color red="0.28235294117647058" green="0.72156862745098038" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
